--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,9 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
+  background: linear-gradient(to bottom, #10101E, #2E94E3);
 }
+
 
 textarea{
   background: transparent;
@@ -13,12 +15,75 @@ textarea{
   padding: 10px;
 }
 
+.header {
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #10101E;
+}
+
+.datetime {
+  color: #fff;
+  background-color: #10101E;
+  font-family: "Segoe UI", sans-serif;
+  width: 340px;
+  padding: 15px 10px;
+  border: 3px solid #2E94E3;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  -webkit-box-reflect: below 1px linear-gradient(transparent, rgba(255, 255, 255, 0.1));
+  transition: 0.5s;
+  transition-property: background, box-shadow;
+}
+
+.datetime:hover{
+  background: #2E94E3;
+  box-shadow: 0 0 30px #2E94E3;
+}
+
+.date{
+  font-size: 20px;
+  font-weight: 200px;
+  text-align: center;
+  letter-spacing: 3px;
+}
+
+.time{
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.time span:not(:last-child){
+  position: relative;
+  margin: 0 6px;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: 3px;
+}
+
+.time span:last-child{
+  background-color: #2E94E3;
+  font-size: 33px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-top:10px;
+  padding: 0 5px;
+  border-radius: 3px;
+}
+
 .jumbotron {
   text-align: center;
   background-color: transparent;
-  color: black;
-  border-radius: 0;
-  border-bottom: 10px solid black;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0;
+  padding: 0 50px 0 50px;
 }
 
 .description{
