--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,12 +16,17 @@ textarea{
 }
 
 .header {
-  height: 500px;
+  height: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 
+}
+
+/* I will use digital clock instead */
+#currentDay {
+  display: none;
 }
 
 /* Digital clock style */
@@ -32,11 +37,12 @@ textarea{
   padding: 15px 10px;
   border: 3px solid #2E94E3;
   border-radius: 5px;
-  margin-bottom: 20px;
   -webkit-box-reflect: below 1px linear-gradient(transparent, rgba(255, 255, 255, 0.1));
   transition: 0.5s;
   transition-property: background, box-shadow;
-  margin-bottom: 120px;
+  position: fixed;
+  z-index: 99;
+  margin-right: 81%;
 }
 
 .datetime:hover{
